--- a/_includes/head.html
+++ b/_includes/head.html
@@ -63,7 +63,7 @@
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
     <meta property="og:site_name" content="{{ site.title | xml_escape }}">
     {% if site.post_preview_image %}
-    <meta property="og:image" content="Docs4LTCJustice.ca/LTC.jpg">
+    <meta property="og:image" content="{{ site.url }}/LTC.jpg">
     {% endif %}
 
     <!-- Twitter Card -->
@@ -76,7 +76,7 @@
     <meta name="twitter:description" content="{% if page.summary %}{{ page.summary }}{% else %}{{ site.description }}{% endif %}" />
     <meta name="twitter:url" content="{{ site.url }}{{ page.url }}" />
     {% if site.post_preview_image %}
-    <meta name="twitter:image" content="{{ site.url }}/images/me.jpg" />
+    <meta name="twitter:image" content="https://www.docs4ltcjustice.ca/LTC.jpg" />
     {% endif %}
 
     <!-- Icons -->
